[tool.poetry]
name = "auto-osint"
version = "0.1.0"
description = "Automates mundane OSINT tasks through APIS and web scraping"
authors = ["jjwalter368 <jjw368@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
termcolor = "^2.5.0"
requests = "^2.32.3"
cryptography = "^44.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
